--- a/MSSQL/docker-compose.yml
+++ b/MSSQL/docker-compose.yml
@@ -1,9 +1,9 @@
 version: "3"
 services:
     db:
-        image: "mcr.microsoft.com/mssql/server:2019-latest"
+        image: "mcr.microsoft.com/mssql/server"
         environment:
-            SA_PASSWORD: "yourStrong(!)Password"
+            MSSQL_SA_PASSWORD: "12345qwerASDF"
             ACCEPT_EULA: "Y"
         ports:
           - "1433:1433"
