--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
         "**/.DS_Store": true,
         "**/Thumbs.db": true,
         "**/node_modules": true
-    }
+    },
+    "dotnet.defaultSolution": "Production-Strategies/nginx-angular-asp.net-single.domen/WebApplication1/WebApplication1.sln"
 }
