--- a/MSSQL/docker-compose.yml
+++ b/MSSQL/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3"
 services:
     db:
+        restart: always
         image: "mcr.microsoft.com/mssql/server"
         environment:
             MSSQL_SA_PASSWORD: "12345qwerASDF"
